--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     },
     "devDependencies": {
         "asyncjs": "~0.0.9",
-        "sinon": "~1.3.0"
+        "sinon": "~1.3.0",
+        
+        "express": "3.0.3",
+        "ejs": "*"
     }
 }
