--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     },
     "dependencies": {
         "http-error": "~0.0.1",
-        "request": "~2.12.0"
+        "request": "~2.12.0",
+        "email-validator": "~0.1.2"
     },
     "devDependencies": {
         "asyncjs": "~0.0.9",
