--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dependencies": {
         "http-error": "~0.0.1",
         "request": "~2.12.0",
-        "email-validator": "~0.1.2"
+        "amd-loader": "~0.0.5"
     },
     "devDependencies": {
         "asyncjs": "~0.0.9",
