--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "debug": "^2.6.8"
   },
   "devDependencies": {
+    "assert-diff": "^1.2.0",
     "asyncjs": "~0.0.9",
-    "sinon": "~1.3.0",
+    "ejs": "*",
     "express": "3.0.3",
-    "ejs": "*"
+    "sinon": "~1.3.0"
   }
 }
