--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "description": "Frontdoor is a libarary for creating RESTful API servers.",
   "version": "0.0.2",
   "scripts": {
-    "test": "find lib | grep '_test.js$' | xargs -n 1 node"
+    "release": "npm run cov && npm run assert-cov",
+    "test": "./node_modules/.bin/mocha 'lib/**/*_test.js'",
+    "cov": "./node_modules/.bin/nyc -r text -r html npm run test",
+    "assert-cov": "./node_modules/.bin/nyc check-coverage --branches 70 --lines 80"
   },
   "licenses": [
     {
@@ -27,16 +30,18 @@
     "node": ">=0.6.0"
   },
   "dependencies": {
-    "http-error": "~0.0.1",
-    "request": "~2.12.0",
     "amd-loader": "~0.0.5",
-    "debug": "^2.6.8"
+    "debug": "^2.6.8",
+    "eslint": "^4.1.1",
+    "http-error": "~0.0.1",
+    "request": "~2.12.0"
   },
   "devDependencies": {
     "assert-diff": "^1.2.0",
-    "asyncjs": "~0.0.9",
     "ejs": "*",
     "express": "3.0.3",
+    "mocha": "^3.4.2",
+    "nyc": "^11.0.3",
     "sinon": "~1.3.0"
   }
 }
