--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "release": "run-s test",
     "test": "run-s 'test:*'",
-    "test:unit": "nyc -r text -r html mocha 'lib/**/*_test.js'",
+    "test:unit": "nyc -r text -r html mocha 'lib/**/*_test.js' --exit",
     "test:lint": "eslint --max-warnings 0 frontdoor.js lib/",
     "test:coverage": "nyc check-coverage --branches 70 --lines 80",
     "test:prettier": "prettier --list-different '**/*.js'",
@@ -38,14 +38,15 @@
     "http-error": "~0.0.1"
   },
   "devDependencies": {
-    "assert-diff": "^1.2.0",
-    "ejs": "*",
-    "eslint": "^4.1.1",
-    "express": "3.0.3",
-    "mocha": "^3.4.2",
-    "npm-run-all": "^4.1.3",
-    "nyc": "^11.0.3",
-    "prettier": "^1.13.5",
-    "sinon": "~1.3.0"
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.25.1",
+    "assert-diff": "^3.0.4",
+    "eslint": "^9.25.1",
+    "globals": "^16.0.0",
+    "mocha": "^11.1.0",
+    "npm-run-all": "^4.1.5",
+    "nyc": "^17.0.1",
+    "prettier": "^3.5.3",
+    "sinon": "^20.0.0"
   }
 }
